--- a/app/styles/index.styl
+++ b/app/styles/index.styl
@@ -1,8 +1,34 @@
-@import 'common'
-
 html
-    font-size 62.5%
+  overflow-y: auto
+  background-color: transparent
+  font-size 62.5%
 
 body
-    color #333
-    font 1.2em Helvetica, Arial
+  overflow: hidden
+  padding: 0
+  background: #1c2a30
+  color: #efefef
+  font: 1.4em Helvetica, Arial
+
+a
+  color: lighten(#1c2a30, 50%)
+  &:visited
+    color: lighten(#1c2a30, 30%)
+  &:hover
+    color: lighten(#1c2a30, 65%)
+
+
+
+ul
+  li
+    list-style: none
+
+::-webkit-scrollbar
+  width: 20px
+  height: 0
+::-webkit-scrollbar-track
+  height: 10px
+  background: rgba(0, 0, 0, 0)
+::-webkit-scrollbar-thumb
+  background: rgba(0, 0, 0, 1)
+  border-radius: 10px
