--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -69,18 +69,128 @@ p {
   margin: 0;
   padding: 1em;
 }
-p {
-  font-size: 1.2em;
-  font-weight: bold;
-  margin: 0;
-  padding: 1em;
-}
 html {
+  overflow-y: auto;
+  background-color: transparent;
   font-size: 62.5%;
 }
 body {
-  color: #333;
-  font: 1.2em Helvetica, Arial;
+  overflow: hidden;
+  padding: 0;
+  background: #1c2a30;
+  color: #efefef;
+  font: 1.4em Helvetica, Arial;
+}
+a {
+  color: #769eaf;
+}
+a:visited {
+  color: #4c7282;
+}
+a:hover {
+  color: #9fbbc7;
+}
+ul li {
+  list-style: none;
+}
+::-webkit-scrollbar {
+  width: 20px;
+  height: 0;
+}
+::-webkit-scrollbar-track {
+  height: 10px;
+  background: rgba(0,0,0,0.00);
+}
+::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 10px;
+}
+.projects_container {
+  overflow: hidden;
+  overflow-x: scroll;
+  height: 500px;
+}
+#projects {
+  position: relative;
+  width: 2000px;
+  margin: 0;
+  padding: 0;
+}
+#projects > li {
+  float: left;
+  width: 250px;
+  height: 510px;
+  padding: 10px;
+  background: rgba(40,40,40,0.80);
+  border-right: 1px solid rgba(58,58,58,0.70);
+  border-left: 1px solid rgba(80,80,80,0.70);
+}
+#projects > li ul {
+  margin: 0;
+  padding: 0;
+}
+#projects > li ul > li {
+  padding: 7px 0;
+  border-bottom: 1px solid rgba(51,51,51,0.95);
+}
+#projects > li ul > li label {
+  font-weight: 700;
+}
+#projects > li ul > li ul li {
+  padding: 1px 0;
+  border: 0;
+}
+#ticker {
+  overflow: hidden;
+  width: 100%;
+  height: 58px;
+  margin: 0 0 0 0;
+  background: #202e38;
+  border-top: 1px solid #5c5c5c;
+  border-bottom: 1px solid #888;
+  font-size: 15px;
+  font-weight: 700;
+  font-style: italic;
+}
+#ticker ul#tweets {
+  position: relative;
+  overflow: hidden;
+  width: 500%;
+  height: 20px;
+  margin: 18px 0 0;
+  padding: 0;
+}
+#ticker ul#tweets li {
+  position: relative;
+  display: inline-block;
+  float: left;
+  min-width: 400px;
+  margin-right: 35px;
+  list-style: none;
+  text-decoration: none;
+}
+#ticker ul#tweets li div {
+  display: inline-block;
+}
+#ticker ul#tweets li div .author-meta {
+  color: #4c6c85;
+  font-weight: 700;
+}
+#ticker ul#tweets li div .handle {
+  color: #4c6c85;
+}
+#ticker ul#tweets li div .hashtag {
+  color: #4c6c85;
+  text-decoration: none;
+}
+#ticker ul#tweets li div .twitteruser {
+  color: #f47a4b;
+  text-decoration: none;
+}
+#ticker ul#tweets li div .username,
+#ticker ul#tweets li div a {
+  color: #f47a4b;
+  text-decoration: none;
 }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
 .ir br { display: none; }
