--- a/app/styles/projects.styl
+++ b/app/styles/projects.styl
@@ -6,12 +6,13 @@ $projects-height = 510px
   height: $projects-height - 10
 #projects
   position: relative
-  width: 2000px
+  float: left
+  width: 3000px
   margin: 0
   padding: 0
   > li
     float: left
-    width: 250px
+    width: 265px
     height: $projects-height
     padding: 10px
     background: rgba(#282828, 0.8)
