cleanup and styles

--- a/app/styles/index.styl
+++ b/app/styles/index.styl
@@ -16,13 +16,14 @@ body
   background: $background-color
   color: #efefef
   font: 1.4em Helvetica, Arial
+  line-height: 1.2em
 
 a
   color: lighten(#1c2a30, 50%)
   &:visited
-    color: lighten(#1c2a30, 30%)
+    color: lighten(#1c2a30, 50%)
   &:hover
-    color: lighten(#1c2a30, 65%)
+    color: lighten(#1c2a30, 72%)
 
 p
     font-size 1.2em
