--- a/app/styles/tweets.styl
+++ b/app/styles/tweets.styl
@@ -24,6 +24,7 @@ $blue = #2e4150
       display: inline-block
       float: left
       min-width: 400px
+      height: 20px
       margin-right: 35px
       list-style: none
       text-decoration: none
