--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -76,15 +76,16 @@ body {
   background: #1c2a30;
   color: #efefef;
   font: 1.4em Helvetica, Arial;
+  line-height: 1.2em;
 }
 a {
   color: #769eaf;
 }
 a:visited {
-  color: #4c7282;
+  color: #769eaf;
 }
 a:hover {
-  color: #9fbbc7;
+  color: #b2c9d2;
 }
 p {
   font-size: 1.2em;
@@ -108,9 +109,8 @@ ul li {
   border-radius: 10px;
 }
 .projects_container {
-  overflow: hidden;
   overflow-x: scroll;
-  height: 500px;
+  overflow-y: hidden;
 }
 #projects {
   position: relative;
@@ -120,7 +120,7 @@ ul li {
 #projects > li {
   float: left;
   width: 265px;
-  height: 510px;
+  height: 440px;
   padding: 10px;
   background: rgba(40,40,40,0.80);
   border-right: 1px solid rgba(58,58,58,0.70);
@@ -133,6 +133,12 @@ ul li {
 #projects > li ul > li {
   padding: 7px 0;
   border-bottom: 1px solid rgba(51,51,51,0.95);
+}
+#projects > li ul > li h2 {
+  margin: 6px 0;
+}
+#projects > li ul > li h3 {
+  margin: 4px 0;
 }
 #projects > li ul > li label {
   font-weight: 700;
@@ -166,6 +172,7 @@ ul li {
   display: inline-block;
   float: left;
   min-width: 400px;
+  height: 20px;
   margin-right: 35px;
   list-style: none;
   text-decoration: none;
