--- a/app/styles/index.styl
+++ b/app/styles/index.styl
@@ -35,6 +35,13 @@ ul
   li
     list-style: none
 
+section
+  margin: 0 -35px
+  padding: 0 35px
+  background: lighten($background-color, 6%)
+  border-top: 1px solid #555
+  box-shadow: inset 0 0 35px #111
+
 ::-webkit-scrollbar
   width: 20px
   height: 0
