--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -60,6 +60,10 @@ table { border-collapse: collapse; border-spacing: 0; }
 td { vertical-align: top; }
 
 .chromeframe { margin: 0.2em 0; background: #ccc; color: black; padding: 0.2em 0; }
+#graph {
+  width: 50%;
+  height: 250px;
+}
 ::selection {
   background: #547e90;
   color: #fff;
@@ -95,6 +99,13 @@ p {
 }
 ul li {
   list-style: none;
+}
+section {
+  margin: 0 -35px;
+  padding: 0 35px;
+  background: #263840;
+  border-top: 1px solid #555;
+  box-shadow: inset 0 0 35px #111;
 }
 ::-webkit-scrollbar {
   width: 20px;
